--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <section class="sidebar_information">
       <div class="sidebar_userimage">
          <!-- 1º Commit Tu nombre y foto -->
-        <img src="images/git.jpg">
+        <img src="https://pbs.twimg.com/profile_images/378800000611893036/07aa28d0af6c8acd250f70fecde16d78_400x400.jpeg">
         <h1 class="sidebar_information_title">
-          Escribe tu nombre
+          Francisco Anzueto
         </h1>
       </div>
       <div class="comunidad-autoria">
