--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
     <div class="bloque">
       <!-- 4º Commit - Tu presentación -->
       <h3>¡Hola! Bienvenido</h3>
-      <p>Tu descripción</p>
+      <p>Soy un desarrollador apasionado por aprender nuevas tecnologias de desarrollo web y movil.</p>
     </div>
 
     <div class="bloque">
       <!-- 5º Commit - Tu portafolio -->
       <h3>Tu portafolio</h3>
-      <a href="#"><p>Nombre de tu sitio</p></a>
+      <a href="http://franzueto.me"><p>franzueto.me</p></a>
       <a href="#"><p>Nombre de tu sitio</p></a>
       <a href="#"><p>Nombre de tu sitio</p></a>
       <a href="#"><p>Nombre de tu sitio</p></a>
