--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </li>
       <li>
         <a href="#" target="_blank">
-          <p>LinkedIN</p>
+          <p>LinkedIN - No disponible</p>
         </a>
       </li>
       <li>
