Se agrego la carita al nombre

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
          <!-- 1º Commit Tu nombre y foto -->
         <img src="https://pbs.twimg.com/profile_images/378800000611893036/07aa28d0af6c8acd250f70fecde16d78_400x400.jpeg">
         <h1 class="sidebar_information_title">
-          Francisco Anzueto
+          Francisco Anzueto :-)
         </h1>
       </div>
       <div class="comunidad-autoria">
