--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
     <div class="bloque">
       <!-- 4º Commit - Tu presentación -->
       <h3>¡Hola! Bienvenido</h3>
-      <p>Soy un desarrollador apasionado por aprender nuevas tecnologias de desarrollo web y movil.</p>
+      <p>Soy un desarrollador de software apasionado por aprender nuevas tecnologias de desarrollo web y movil.</p>
+      <p>"Compartiendo el conocimiento se aprende mejor".</p>
     </div>
 
     <div class="bloque">
