--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <!-- 4º Commit - Tu presentación -->
       <h3>¡Hola! Bienvenido</h3>
       <p>Soy un desarrollador apasionado por aprender nuevas tecnologias de desarrollo web y movil.</p>
+      <p>"Sonrie, seras feliz y haras feliz a otros."</p>
     </div>
 
     <div class="bloque">
